[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelSelector/LevelSelector.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -471.0
margin_top = -100.0
margin_right = 518.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Level1" type="Button" parent="HBoxContainer"]
margin_left = 389.0
margin_right = 409.0
margin_bottom = 110.0
text = "1"

[node name="Level2" type="Button" parent="HBoxContainer"]
margin_left = 413.0
margin_right = 433.0
margin_bottom = 110.0
text = "2"

[node name="Level3" type="Button" parent="HBoxContainer"]
margin_left = 437.0
margin_right = 457.0
margin_bottom = 110.0
text = "3"

[node name="Level4" type="Button" parent="HBoxContainer"]
margin_left = 461.0
margin_right = 481.0
margin_bottom = 110.0
text = "4"

[node name="Level5" type="Button" parent="HBoxContainer"]
margin_left = 485.0
margin_right = 505.0
margin_bottom = 110.0
text = "5"

[node name="Level6" type="Button" parent="HBoxContainer"]
margin_left = 509.0
margin_right = 529.0
margin_bottom = 110.0
text = "6"

[node name="Level7" type="Button" parent="HBoxContainer"]
margin_left = 533.0
margin_right = 553.0
margin_bottom = 110.0
text = "7"

[node name="BackToMenu" type="Button" parent="HBoxContainer"]
margin_left = 557.0
margin_right = 599.0
margin_bottom = 110.0
text = "Back"

[connection signal="pressed" from="HBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="HBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="HBoxContainer/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="HBoxContainer/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="HBoxContainer/Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="HBoxContainer/Level6" to="." method="_on_Level6_pressed"]
[connection signal="pressed" from="HBoxContainer/Level7" to="." method="_on_Level7_pressed"]
[connection signal="pressed" from="HBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
